--- a/html/index.html
+++ b/html/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
   <head>
     <title>IpSpawn</title>
@@ -30,18 +29,15 @@
     </style>
     <nav class="site-header sticky-top py-1 bg-dark">
       <div class="container d-flex flex-column flex-md-row justify-content-between">
-        <a class="py-2" href="#">
-          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="d-block mx-auto" role="img" viewBox="0 0 24 24" focusable="false"><title>Product</title><circle cx="12" cy="12" r="10"/><path d="M14.31 8l5.74 9.94M9.69 8h11.48M7.38 12l5.74-9.94M9.69 16L3.95 6.06M14.31 16H2.83m13.79-4l-5.74 9.94"/></svg>
+        <a class="py-3" href="#">
+          <svg xmlns="style/pictures/Ipspawn.svg" width="24" height="24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="d-block mx-auto" role="img" </svg>
         </a>
         <a class="py-3 d-none d-md-inline-block text-danger btn" href="#"><h6>Cours</h6></a>
         <a class="py-3 d-none d-md-inline-block text-danger btn" href="#"><h6>Script</h6></a>
-        <a class="py-3 d-none d-md-inline-block text-danger btn" href="#"><h6>Messagerie</h6></a>
-        <a class="py-3 d-none d-md-inline-block text-danger btn" href="#"><h6>Connexion</h6></a>
-        <a class="py-3 d-none d-md-inline-block text-danger btn" href="#"><h6>Contacte</h6></a>
-        <a class="py-3 d-none d-md-inline-block text-danger btn" href="#"><h6>Inscription</h6></a>
-        <form class="form-inline mt-4 mt-md-0 mb-1">
-          <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success my-0 my-sm-0" type="submit">Search</button>
+        <a class="py-3 d-none d-md-inline-block text-danger btn" href="sign_in.php"><h6>Connexion</h6></a>
+        <form class="form-inline mt-4 mt-md-0 mb-1 ">
+          <input class="form-control mr-sm-2" type="text" size="13" style="height:25px;" placeholder="Recherche" aria-label="Search">
+          <button class="btn btn-secondary btn-sm " type="submit">Valider</button>
         </form>
       </div>
     </nav>
@@ -49,7 +45,7 @@
       <div class="col-md-8 p-lg-8 mx-auto my-8">
         <h1 class="display-4 font-weight-normal">IpSpawn</h1>
         <p class="lead font-weight-normal">Bienvenue sur IpSpawn, notre objectif et de partager et d'échanger nos connaissances. Vous avez accès a une boite a outils, des cours, ainsi que de script générer spécialement selon vos besoins.</p>
-        <a class="btn btn-outline-secondary" href="#">Coming soon</a>
+        <a class="btn btn-outline-secondary" href="#">Prochainement</a>
       </div>
       <div class="product-device shadow-sm d-none d-md-block"></div>
       <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
