--- a/html/footer.html
+++ b/html/footer.html
@@ -1,4 +1,4 @@
-<footer class="page-footer font-small blue bg-dark pt-4 fixed-bottom">
+<footer class="page-footer font-small blue bg-dark pt-4 navbar-fixed-bottom">
   <div class="container-fluid text-center text-md-left">
     <div class="row">
       <div class="col-md-10 mt-md-0 mt-3">
