--- a/html/index.html
+++ b/html/index.html
@@ -1,9 +1,34 @@
-    <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light">
-      <div class="col-md-8 p-lg-8 mx-auto my-8">
-        <h1 class="display-4 font-weight-normal">IpSpawn</h1>
-        <p class="lead font-weight-normal">Bienvenue sur IpSpawn, notre objectif et de partager et d'échanger nos connaissances. Vous avez accès a une boite a outils, des cours, ainsi que de script générer spécialement selon vos besoins.</p>
-        <a class="btn btn-outline-secondary" href="#">Prochainement</a>
-      </div>
-      <div class="product-device shadow-sm d-none d-md-block"></div>
-      <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
-    </div>
+<!-- INTRODUCTION -->
+<div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light">
+  <div class="col-md-8 p-lg-8 mx-auto">
+    <img height="30%" width="60%" src="./style/pictures/png/banniere_ipspawn_black.png">
+    <p class="lead font-weight-normal">Bienvenue sur IpSpawn, notre objectif est de partager et d'échanger nos connaissances. Vous avez accès à une boite a outils, des cours, ainsi que de scripts générer spécialement selon vos besoins.</p>
+  </div>
+  <div class="product-device shadow-sm d-none d-md-block"></div>
+  <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
+</div>
+
+<!-- SCRIPTS -->
+<div class="jumbotron">
+  <div class="container">
+    <h3>Scripts<h3>
+      <center><img height="30%" width="65%" src="./style/pictures/png/presentation_script.png"></center><br>
+    <center><a class="btn btn-primary btn-lg" href="#" role="button">Accéder aux scripts</a></center>
+  </div>
+</div>
+
+<!-- COURS -->
+<div class="jumbotron">
+  <div class="container">
+    <h3>Cours<h3>
+    <center><p><a class="btn btn-primary btn-lg" href="#" role="button">Accéder aux cours</a></p></center>
+  </div>
+</div>
+
+<!-- OUTILS -->
+<div class="jumbotron">
+  <div class="container">
+    <h3>Outils<h3>
+    <center><p><a class="btn btn-primary btn-lg" href="#" role="button">Accéder aux outils</a></p></center>
+  </div>
+</div>
