--- a/html/footer.html
+++ b/html/footer.html
@@ -1,21 +1,30 @@
 <footer class="page-footer font-small blue bg-dark pt-4 navbar-fixed-bottom">
-  <div class="container-fluid text-center text-md-left">
-    <div class="row">
-      <div class="col-md-10 mt-md-0 mt-3">
-        <h5 class="text-uppercase text-success">Contact</h5>
-        <p class="text-light mt-1">Nous recrutons des utilisateurs actifs qui souhaiterai poster des articles ou bien administrer,<br>si vous êtes intérésser, que vous avez des questions ou que vous avez trouver un bug vous pouvez nous contacter par mail a l'addresse suivante.</p>
-      </div>
-        <hr class="clearfix w-100 d-md-none pb-1">
-        <div class="col-md-2 mb-md-0 mb-1 mt-3">
-          <h5 class="text-uppercase text-danger">Mail </h5>
-          <ul class="list-unstyled">
-            <li><a href="mailto:ipspawn@gmx.com">ipspawn@gmx.com</a><li>
-          </ul>
-        </div>
-      </div>
-    </div>
+    <table>
+        <tr>
+            <td>
+                <h5 class="text-uppercase text-success">Contact</h5>
+            </td>
+            <td>
+                <h5 class="text-uppercase text-danger">Mail </h5>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <p class="text-light mt-1">
+                    Nous recrutons des utilisateurs actifs qui souhaiterai poster des articles ou bien administrer,
+                    <br>
+                    Si vous êtes intérésser, que vous avez des questions ou que vous avez trouver un bug vous pouvez nous contacter par mail a l'addresse suivante.
+                </p>
+            </td>
+            <td>
+                <ul class="list-unstyled">
+                    <li><a href="mailto:ipspawn@gmx.com">ipspawn@gmx.com</a><li>
+                </ul>
+            </td>
+        </tr>
+    </table>
     <div class="footer-copyright text-center py-2 text-success">© 2019 Copyright: IPSpawn
     </div>
-  </footer>
-  </body>
+</footer>
+</body>
 </html>
