--- a/html/footer.html
+++ b/html/footer.html
@@ -1,30 +1,27 @@
-<footer class="page-footer font-small blue bg-dark pt-4 navbar-fixed-bottom">
-    <table>
-        <tr>
-            <td>
-                <h5 class="text-uppercase text-success">Contact</h5>
-            </td>
-            <td>
-                <h5 class="text-uppercase text-danger">Mail </h5>
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <p class="text-light mt-1">
-                    Nous recrutons des utilisateurs actifs qui souhaiterai poster des articles ou bien administrer,
-                    <br>
-                    Si vous êtes intérésser, que vous avez des questions ou que vous avez trouver un bug vous pouvez nous contacter par mail a l'addresse suivante.
-                </p>
-            </td>
-            <td>
-                <ul class="list-unstyled">
-                    <li><a href="mailto:ipspawn@gmx.com">ipspawn@gmx.com</a><li>
-                </ul>
-            </td>
-        </tr>
-    </table>
-    <div class="footer-copyright text-center py-2 text-success">© 2019 Copyright: IPSpawn
-    </div>
-</footer>
-</body>
+    <footer class="page-footer font-small blue bg-dark pt-4 nav-barfixed-bottom">
+      <div class="container">
+        <div class="row">
+          <div class="col-10">
+            <h5 class="text-uppercase text-success">Contact</h5>
+          </div>
+          <div class="col-2">
+            <h5 class="text-uppercase text-danger ml-3">Mail</h5>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-10">
+            <p class="text-light mt-1">
+                Nous recrutons des utilisateurs actifs qui souhaiterai poster des articles ou bien administrer,
+                <br>
+                Si vous êtes intérésser, que vous avez des questions ou que vous avez trouver un bug vous pouvez nous contacter par mail a l'addresse suivante.
+            </p>
+          </div>
+          <div class="col-2">
+            <a href="mailto:ipspawn@gmx.com">ipspawn@gmx.com</a>
+          </div>
+        </div>
+        <div class="footer-copyright text-center py-2 text-success">© 2019 Copyright: IPSpawn</div>
+      </div>
+    </footer>
+  </body>
 </html>
