--- a/html/index.html
+++ b/html/index.html
@@ -10,47 +10,44 @@
 
 <!-- SCRIPTS -->
 <div class="jumbotron">
-  <div class="container">
-    <h3>Scripts<h3>
-      <div class="container_terminal">
-        <div class="row_terminal">
-          <span class="red">┌─[</span><span class="lightGreen">guillaumezisa</span><span class="yellow">@</span><span class="darkBlue">parrot</span><span class="red">] - [</span><span class="darkGreen">~</span><span class="red">]</span>
-        </div>
-        <div class="row_terminal">
-          <div class="col_terminal">
-            <span class="red">
-                └──╼
-            </span>
-          </div>
-          <div class="col_terminal">
-            <span class="yellow"> $ </span>
-          </div>
-          <div class="col_terminal">
-            <span class="darkGreen">Un ensemble de scripts customisables est disponible pour différents systèmes d'exploitation (debian, arch,fedora, windows).</span>
-            <p class="darkGreen">
-              Une option qui permet de créer un script principal en mettant plusieurs scripts au choix dans un panier et de générer le tout à la fin.
-            </p><br>
-          </div>
-        </div>
-        <div class="row_terminal">
-          <span class="red">┌─</span><span class="red">[root</span><span class="yellow">@</span><span class="darkBlue">script</span><span class="red">] - [</span><span class="darkGreen">~</span><span class="red">]</span>
-        </div>
-        <div class="row_terminal">
-          <div class="col_terminal_terminal">
-            <span class="red">
-                └──╼
-            </span>
-          </div>
-          <div class="col_terminal">
-            <span class="darkGreen">
-              # Créé un script et partage le avec la communauté.
-            </span>
-          </div>
-        </div>
+  <h3>Scripts</h3>
+  <div class="container-term">
+    <div class="row-term">
+      <span class="red">┌─[</span><span class="lightGreen">guillaumezisa</span><span class="yellow">@</span><span class="darkBlue">parrot</span><span class="red">] - [</span><span class="darkGreen">~</span><span class="red">]</span>
+    </div>
+    <div class="row-term">
+      <div class="col-term">
+        <span class="red">
+        └──╼
+        </span>
       </div>
-
-    <center><a class="btn btn-primary btn-lg" href="#" role="button">Accéder aux scripts</a></center>
+      <div class="col-term">
+        <span class="yellow"> $ </span>
+      </div>
+      <div class="col-term">
+        <span class="darkGreen">Un ensemble de scripts customisables est disponible pour différents systèmes d'exploitation (debian, arch,fedora, windows).</span>
+        <p class="darkGreen">
+        Une option qui permet de créer un script principal en mettant plusieurs scripts au choix dans un panier et de générer le tout à la fin.
+        </p><br>
+      </div>
+    </div>
+    <div class="row-term">
+      <span class="red">┌─</span><span class="red">[root</span><span class="yellow">@</span><span class="darkBlue">script</span><span class="red">] - [</span><span class="darkGreen">~</span><span class="red">]</span>
+    </div>
+    <div class="row-term">
+      <div class="col-term">
+        <span class="red">
+          └──╼
+        </span>
+      </div>
+      <div class="col-term">
+        <span class="darkGreen">
+        # Créé un script et partage le avec la communauté.
+        </span>
+      </div>
+    </div>
   </div>
+  <center><a class="btn btn-primary btn-lg" href="#" role="button">Accéder aux scripts</a></center>
 </div>
 
 <!-- COURS -->
