--- a/html/header_online.html
+++ b/html/header_online.html
@@ -26,6 +26,49 @@
           font-size: 3.5rem;
         }
       }
+
+      .jumbotron {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+      }
+      .jumbotron h3 {
+        align-self: flex-start;
+      }
+      .container-term {
+        background-color: black;
+        padding: 4px;
+        margin: 10px 0;
+        box-sizing: border-box;
+        font-family: "Courier";
+        display: flex;
+        flex-direction: column;
+        max-width: 900px;
+      }
+      .row-term {
+        display: flex;
+      }
+      .row-term > .col-term:first-child {
+        margin-top: -4px;
+      }
+      .row-term > .col-term:nth-child(2) {
+        margin: 0 6px;
+      }
+      .lightGreen {
+        color: #00F300;
+      }
+      .darkGreen {
+        color: #308A09;
+      }
+      .darkBlue {
+        color: #3a3a9c;
+      }
+      .red {
+        color: #CC0000;
+      }
+      .yellow {
+        color: #FBE64D;
+      }
     </style>
     <nav class="site-header sticky-top py-1 bg-dark">
       <div class="container d-flex flex-column flex-md-row justify-content-between">
