Update sign style

--- a/html/footer.html
+++ b/html/footer.html
@@ -11,9 +11,9 @@
         <div class="row">
           <div class="col-10">
             <p class="text-light mt-1">
-                Nous recrutons des utilisateurs actifs qui souhaiterai poster des articles ou bien administrer,
+                Nous recrutons des utilisateurs actifs qui souhaiteraient poster des articles ou bien administrer,
                 <br>
-                Si vous êtes intérésser, que vous avez des questions ou que vous avez trouver un bug vous pouvez nous contacter par mail a l'addresse suivante.
+                Si vous êtes intéréssé, que vous avez des questions ou que vous avez trouvé un bug vous pouvez nous contacter par mail a l'addresse suivante.
             </p>
           </div>
           <div class="col-2">
