--- a/html/sign.html
+++ b/html/sign.html
@@ -23,7 +23,7 @@
             <input type="checkbox" value="remember-me"> Se souvenir de moi
           </label>
         </div>
-        <button class="btn btn-lg btn-success btn-block " type="submit">Connexion</button>
+        <button class="btn btn-lg btn-success btn-block" type="submit" name="sign-in">Connexion</button>
       </form>
     </div>
     <div class="col-2"></div>
