--- a/html/index.html
+++ b/html/index.html
@@ -2,7 +2,7 @@
 <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light">
     <div class="col-md-8 p-lg-8 mx-auto">
         <img height="30%" width="60%" src="./style/pictures/png/banniere_ipspawn_black.png">
-        <p class="lead font-weight-normal">Bienvenue sur IpSpawn, notre objectif est de partager et d'échanger nos connaissances. Vous avez accès à une boite a outils, des cours, ainsi que de scripts générer spécialement selon vos besoins.</p>
+        <p class="lead font-weight-normal">Bienvenue sur IpSpawn,<br>notre objectif est de partager et d'échanger nos connaissances.<br>Vous avez accès à une boite a outils, des cours,<br>ainsi qu'a de nombreux scripts généré spécialement selon vos besoins.</p>
     </div>
     <div class="product-device shadow-sm d-none d-md-block"></div>
     <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
