--- a/html/header_online.html
+++ b/html/header_online.html
@@ -73,20 +73,29 @@
     <nav class="site-header sticky-top py-1 bg-dark">
       <div class="container d-flex flex-column flex-md-row justify-content-between">
         <div class="row">
-          <div class="col-3 mt-2">
+          <div class="col-2 mt-3">
             <a class="py-3 " href="#">
-              <img width="34%"src="style/pictures/png/favicon.png"
+              <img width="40%"src="style/pictures/png/favicon.png"
             </a>
           </div>
-          <div class="col-2 mt-1">
-                <a class="py-3 d-none d-md-inline-block text-danger btn" href="#"><img width="22%" src="style/pictures/png/icon_books.png"><h5>Cours</h5></a>
+          <div class="col-1 mt-1">
+                <a class="py-3 d-none d-md-inline-block text-danger btn" href="#"><img width="65%" src="style/pictures/png/icon_books.png"></img><h5>Cours</h5></a>
           </div>
-          <div class="col-2 mt-1">
-            <a class="py-3 d-none d-md-inline-block text-danger btn" href="#"><img width="22%" src="style/pictures/png/icon_shell.png"><h5>Script</h5></a>
+          <div class="col-1 mt-1">
+            <a class="py-3 d-none d-md-inline-block text-danger btn" href="#"><img width="70%" src="style/pictures/png/icon_shell.png"></img><h5>Script</h5></a>
           </div>
-          <div class="col-2 mt-1">
-            <a class="py-3 d-none d-md-inline-block text-danger btn" href="sign_in.php"><img width="22%"src="style/pictures/png/icon_log_in.png"><h5>Connexion</h5></a>
+          <div class="col-1 mt-1">
+            <a class="py-3 d-none d-md-inline-block text-danger btn" href="#"><img width="88%" src="style/pictures/png/icon_chat.png"></img><h5>Chat</h5></a>
           </div>
+          <div class="col-1 mt-1">
+            <a class="py-3 d-none d-md-inline-block text-danger btn" href="#"><img width="53%" src="style/pictures/png/icon_profile.png"></img><h5>Compte</h5></a>
+          </div>
+          <div class="col-1 mt-1 ">
+            <a class="py-3 d-none d-md-inline-block text-danger btn" href="/sign_out.php"><img width="32%" src="style/pictures/png/icon_disconnect.png"></img><h5>Déconnexion</h5></a>
+          </div>
+          <div class="col-1 mt-1">
+          </div>
+
           <div class="col-3 mt-4">
             <form class="form-inline mt-2 mb-1 ">
                 <input class="form-control mr-sm-2 ml-4" type="text" size="12" style="height:25px;" placeholder="Recherche" aria-label="Search">
