Update last version

--- a/html/header_online.html
+++ b/html/header_online.html
@@ -88,7 +88,7 @@
             <a class="py-3 d-none d-md-inline-block text-danger btn" href="#"><img width="88%" src="style/pictures/png/icon_chat.png"></img><h5>Chat</h5></a>
           </div>
           <div class="col-1 mt-1">
-            <a class="py-3 d-none d-md-inline-block text-danger btn" href="#"><img width="53%" src="style/pictures/png/icon_profile.png"></img><h5>Compte</h5></a>
+            <a class="py-3 d-none d-md-inline-block text-danger btn" href="/account_settings.php"><img width="53%" src="style/pictures/png/icon_profile.png"></img><h5>Compte</h5></a>
           </div>
           <div class="col-1 mt-1 ">
             <a class="py-3 d-none d-md-inline-block text-danger btn" href="/sign_out.php"><img width="32%" src="style/pictures/png/icon_disconnect.png"></img><h5>Déconnexion</h5></a>
